--- a/CookBook.Web/ClientApp/src/app/home/home.component.html
+++ b/CookBook.Web/ClientApp/src/app/home/home.component.html
@@ -1,14 +1,44 @@
-<h1>Hello, world!</h1>
-<p>Welcome to your new single-page application, built with:</p>
-<ul>
-  <li><a href='https://get.asp.net/'>ASP.NET Core</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
-  <li><a href='https://angular.io/'>Angular</a> and <a href='http://www.typescriptlang.org/'>TypeScript</a> for client-side code</li>
-  <li><a href='http://getbootstrap.com/'>Bootstrap</a> for layout and styling</li>
-</ul>
-<p>To help you get started, we've also set up:</p>
-<ul>
-  <li><strong>Client-side navigation</strong>. For example, click <em>Counter</em> then <em>Back</em> to return here.</li>
-  <li><strong>Angular CLI integration</strong>. In development mode, there's no need to run <code>ng serve</code>. It runs in the background automatically, so your client-side resources are dynamically built on demand and the page refreshes when you modify any file.</li>
-  <li><strong>Efficient production builds</strong>. In production mode, development-time features are disabled, and your <code>dotnet publish</code> configuration automatically invokes <code>ng build</code> to produce minified, ahead-of-time compiled JavaScript files.</li>
-</ul>
-<p>The <code>ClientApp</code> subdirectory is a standard Angular CLI application. If you open a command prompt in that directory, you can run any <code>ng</code> command (e.g., <code>ng test</code>), or use <code>npm</code> to install extra packages into it.</p>
+<div class="container-page">
+  <div class="col-md-6">
+    <h3 class="dark-grey">Registration</h3>
+
+    <div class="form-group col-lg-12">
+      <label>Email</label>
+      <input type="" name="" class="form-control" id="" value="">
+    </div>
+    <div class="form-group col-lg-12">
+      <label>Full Name</label>
+      <input type="" name="" class="form-control" id="" value="">
+    </div>
+    <div class="form-group col-lg-6">
+      <label>Password</label>
+      <input type="password" name="" class="form-control" id="" value="">
+    </div>
+
+    <div class="form-group col-lg-6">
+      <label>Repeat Password</label>
+      <input type="password" name="" class="form-control" id="" value="">
+    </div>
+
+
+  </div>
+
+  <div class="col-md-6">
+    <h3 class="dark-grey">About CookBook</h3>
+    <p>
+      By clicking on "Register" you agree to The Company's' Terms and Conditions
+    </p>
+    <p>
+      While rare, prices are subject to change based on exchange rate fluctuations -
+      should such a fluctuation happen, we may request an additional payment. You have the option to request a full refund or to pay the new price. (Paragraph 13.5.8)
+    </p>
+    <p>
+      Should there be an error in the description or pricing of a product, we will provide you with a full refund (Paragraph 13.5.6)
+    </p>
+    <p>
+      Acceptance of an order by us is dependent on our suppliers ability to provide the product. (Paragraph 13.5.6)
+    </p>
+
+    <button type="submit" class="btn btn-primary">Register</button>
+  </div>
+</div>
