--- a/CookBook.Web/ClientApp/src/app/my-recipes/my-recipes.component.html
+++ b/CookBook.Web/ClientApp/src/app/my-recipes/my-recipes.component.html
@@ -1,24 +1,97 @@
 <h1>My Recipes</h1>
-
-<p>This are the list of your recipes.</p>
-
+<p>This are the list of recipes you submitted.</p>
 <p *ngIf="!recipes"><em>Loading...</em></p>
+<style>
+    .panel-table .panel-body {
+      padding: 0;
+    }
 
-<table class='table' *ngIf="recipes">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Created By</th>
-      <th>Creation Date</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let recipe of recipes">
-      <td>{{ recipe.recipeName }}</td>
-      <td>{{ recipe.description }}</td>
-      <td>{{ recipe.creator }}</td>
-      <td>{{ recipe.creationDate }}</td>
-    </tr>
-  </tbody>
-</table>
+      .panel-table .panel-body .table-bordered {
+        border-style: none;
+        margin: 0;
+      }
+
+        .panel-table .panel-body .table-bordered > thead > tr > th:first-of-type {
+          text-align: center;
+          width: 100px;
+        }
+
+        .panel-table .panel-body .table-bordered > thead > tr > th:last-of-type,
+        .panel-table .panel-body .table-bordered > tbody > tr > td:last-of-type {
+          border-right: 0px;
+        }
+
+        .panel-table .panel-body .table-bordered > thead > tr > th:first-of-type,
+        .panel-table .panel-body .table-bordered > tbody > tr > td:first-of-type {
+          border-left: 0px;
+        }
+
+        .panel-table .panel-body .table-bordered > tbody > tr:first-of-type > td {
+          border-bottom: 0px;
+        }
+
+        .panel-table .panel-body .table-bordered > thead > tr:first-of-type > th {
+          border-top: 0px;
+        }
+
+    .panel-table .panel-footer .pagination {
+      margin: 0;
+    }
+
+    /*
+  used to vertically center elements, may need modification if you're not using default sizes.
+  */
+    .panel-table .panel-footer .col {
+      line-height: 34px;
+      height: 34px;
+    }
+
+    .panel-table .panel-heading .col h3 {
+      line-height: 30px;
+      height: 30px;
+    }
+
+    .panel-table .panel-body .table-bordered > tbody > tr > td {
+      line-height: 34px;
+    }
+</style>
+
+<div class="row">
+  <div class="col-md-12">
+    <h4>List of Ingredients</h4>
+    <div class="table-responsive">
+      <table id="mytable" class="table table-bordred table-striped">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Recipe Name</th>
+            <th>Description</th>
+            <th>Creator </th>
+            <th>Submission Date</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let recipe of recipes">
+            <td>
+              <a title="View Ingredient Checklist" [routerLink]="['/cook', recipe.id]" class="btn btn-default" style="margin-left:10px; margin-right:10px;">
+                <em class="fa fa-list" title="View this recipe"></em>
+              </a>
+              <a title="Manage Ingredients" [routerLink]="['/add-ingredients', recipe.id]" class="btn btn-default" style="margin-left:10px; margin-right:10px;">
+                <em class="fa fa-eye" title="View this recipe"></em>
+              </a>
+              <a (click)="delete(recipe.id, idx)" class="btn btn-danger" title="Delete this recipe" style="margin-left:10px; margin-right:10px;"><em class="fa fa-trash"></em></a>
+            </td>      
+            
+            <td>{{ recipe.recipeName }}</td>
+            <td>{{ recipe.description }}</td>
+            <td>{{ recipe.creator }}</td>
+            <td>{{ recipe.creationDate }}</td>
+          </tr>
+          <tr></tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+
