--- a/CookBook.Web/ClientApp/src/app/add-ingrdients/add-ingredients.component.html
+++ b/CookBook.Web/ClientApp/src/app/add-ingrdients/add-ingredients.component.html
@@ -1,8 +1,8 @@
 <p *ngIf="!recipe"><em>Loading...</em></p>
 <div>
-  <h2>Recipe Name: {{recipe.recipeName}}</h2>
-  <h2>Recipe By: {{recipe.creator}}</h2>
-  <p>Description: {{recipe.description}}</p>
+  <h3>Recipe Name: {{recipe!.recipeName}}</h3>
+  <h4>Recipe By: {{recipe!.creator}}</h4>
+  <p>Description: {{recipe!.description}}</p>
 </div>
 
 <div class="clearfix"></div>
@@ -20,7 +20,7 @@
 </div>
 
 <div *ngIf="addForm">
-  <h2>Add your new Ingredient</h2>
+  <h2>Add an ingredient</h2>
   <form [formGroup]="ingredientForm" (ngSubmit)="onSubmit()">
     <div *ngIf="message" class="alert alert-info">{{message}}</div>
     <div class="form-group">
@@ -67,7 +67,7 @@
             <td><input type="checkbox" [checked]="item.isChecked" class="checkthis" (change)="changeState($event,item.id)" /></td>
             <td class="hidden-xs">{{ item.ingredientName }}</td>
             <td>{{ item.description }}</td>
-            <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" ><span class="fa fa-trash"></span></button></p></td>
+            <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button (click)="delete(item.id)" class="btn btn-danger btn-xs" data-title="Delete" ><span class="fa fa-trash"></span></button></p></td>
           </tr>
           <tr>
             
