--- a/CookBook.Web/ClientApp/src/app/add-ingrdients/add-ingredients.component.html
+++ b/CookBook.Web/ClientApp/src/app/add-ingrdients/add-ingredients.component.html
@@ -50,13 +50,14 @@
 <div class="clearfix"></div>
 
 <div class="row">
+  <div *ngIf="deleteMessage" class="alert alert-info">{{deleteMessage}}</div>
   <div class="col-md-12">
     <h4>List of Ingredients</h4>
     <div class="table-responsive">
       <table id="mytable" class="table table-bordred table-striped">
         <thead>
           <tr>
-            <th></th>
+            <!--<th></th>-->
             <th>Ingredient Name</th>
             <th>Description</th>
             <th>Delete</th>
@@ -64,19 +65,16 @@
         </thead>
         <tbody>
           <tr *ngFor="let item of ingredients">
-            <td><input type="checkbox" [checked]="item.isChecked" class="checkthis" (change)="changeState($event,item.id)" /></td>
+            <!--<td><input type="checkbox" [checked]="item.isChecked" class="checkthis" (change)="changeState($event,item.id)" /></td>-->
             <td class="hidden-xs">{{ item.ingredientName }}</td>
             <td>{{ item.description }}</td>
-            <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button (click)="delete(item.id)" class="btn btn-danger btn-xs" data-title="Delete" ><span class="fa fa-trash"></span></button></p></td>
+            <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button (click)="delete(item.id)" class="btn btn-danger btn-xs" data-title="Delete"><span class="fa fa-trash"></span></button></p></td>
           </tr>
-          <tr>
-            
-            
-          </tr>
+          <tr></tr>
         </tbody>
 
       </table>
-      
+
 
     </div>
 
